Orchestration with translation (bugfix + fix broken tests)